--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,47 @@ body {
 }
 
 /* Add styles here! */
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+/* header */
+header {
+  padding: 64px 24px 48px;
+  border-bottom: 8px solid hsl(0deg, 0%, 30%);
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.intro-chunk {
+  max-width: 320px;
+}
+
+h1 {
+  padding-bottom: 24px;
+}
+
+/* main */
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  width: 100%;
+  padding: 64px 0;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  padding: 8px 24px 8px;
+  border-bottom: 8px solid hsl(0deg, 0%, 30%);
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  width: fit-content;
+  margin: 0;
+  margin-left: -32px;
+  padding: 8px 24px;
+}
